crates/vm/tests/snapshots/fn_call_kw__kw.snap
---
source: crates/vm/tests/fn_call_kw.rs
expression: snapshot
---
# Input:
fn f(*, a):
  print a

f(a=10)


# Result (success):
none

# Stdout:
10

