crates/vm/tests/snapshots/fn_call_kw__kw_missing.snap
---
source: crates/vm/tests/fn_call_kw.rs
expression: snapshot
---
# Input:
fn f(*, a):
  print a

f()


# Result (error):
[31merror[0m in code: mismatched keyword params: missing a


# Stdout:

