crates/vm/tests/snapshots/fn_call_kw__kw_missing2.snap
---
source: crates/vm/tests/fn_call_kw.rs
expression: snapshot
---
# Input:
fn f(*, a, b):
  print a, b

f()


# Result (error):
in [[main]]
[31merror[0m in code: mismatched keyword params: missing a, b


# Stdout:

