crates/vm/tests/snapshots/fn_call_kw__kw_unrecognized_and_missing.snap
---
source: crates/vm/tests/fn_call_kw.rs
expression: snapshot
---
# Input:
fn f(*, a, b, **kw):
  print a, b, kw

f(c=10)


# Result (error):
[31merror[0m in code: mismatched keyword params: missing a, b


# Stdout:

